--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <title>Electron + Vite + Vue</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <title>Smart POS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="smartpos"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
